fix layer overlap

--- a/themes/jack-q-blog/source/css/main.less
+++ b/themes/jack-q-blog/source/css/main.less
@@ -1189,8 +1189,9 @@ section.article-content{
       font-size: 145px;
       font-weight: 900;
       display: block;
-      color: rgba(180,180,200,0.5);
+      color: rgba(180,180,200,0.7);
       line-height: 100px;
+      z-index: -1;
     }
   }
 }
